# meta-hackathon

./: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  client.py  config.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  run.py  server.py  test_api.py  test_smoke.py  validate.py
env/: __init__.py  environment.py  executor.py  models.py
grader/: __init__.py  grader.py
server/: __init__.py  app.py  environment.py
tasks/easy/: task_001.yaml  task_002.yaml  task_003.yaml  task_004.yaml  task_005.yaml
tasks/hard/: task_001.yaml  task_002.yaml  task_003.yaml  task_004.yaml  task_005.yaml
tasks/medium/: task_001.yaml  task_002.yaml  task_003.yaml  task_004.yaml  task_005.yaml
tests/: test_environment.py  test_executor.py  test_grader.py
